testdata/baselines/reference/submodule/conformance/wideningTuples1.errors.txt
wideningTuples1.ts(4,6): error TS2322: Type 'string' is not assignable to type 'undefined'.


==== wideningTuples1.ts (1 errors) ====
    declare function foo<T extends [any]>(x: T): T;
    
    var y = foo([undefined]);
    y = [""];
         ~~
!!! error TS2322: Type 'string' is not assignable to type 'undefined'.